feat(tratamento de erros): :sparkles: Add source tracking to error details and enhance ValidationHandler functionalities